--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,9 @@
             <h2 class="heading mb-3">Stanford CS+Social Good</h2>
             <div class="sub-heading">
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
-                            <p> <a href="https://solo.stanford.edu/opportunities/cssocial-good-summer-fellowship-2020" target="_blank" id="apply-link">Apply for a CS+SG fellowship today!</a> </p>
-              <!--              <p> <a href="http://bit.ly/cssg2019" target="_blank" id="apply-link">Apply to join our team today!</a> </p>-->
-							<p class="mb-4"><a href="https://bit.ly/cssgEOY1819" target="_blank" id="past-work">Look at Our Past Work</a></p>
+<!--                            <p> <a href="https://solo.stanford.edu/opportunities/cssocial-good-summer-fellowship-2020" target="_blank" id="apply-link">Apply for a CS+SG fellowship today!</a> </p>-->
+                            <p> <a href="https://stanfordai4good.github.io/" target="_blank" id="apply-link">🆕 AI+Social Good Summer Workshop Series</a> </p>
+							<p class="mb-4"><a href="http://bit.ly/cssg_eoy" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://www.facebook.com/cs4good/" target="_blank"><i class="fa fa-facebook"></i></span></a>
@@ -277,75 +277,22 @@
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
 							<h4 class="mb-3"></br>President</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/brooke.jpg')%>" alt="Photograph of Brooke Teferra">
-							<p class="pb_font-15 mt-3 mb-0">Brooke Teferra</p>
-							<p class="pb_font-15"><a href="mailto:bteferra@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/brooke-teferra-0a6337125/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                            <img class="img-fluid rounded-circle" src="<%=require('./images/sasankh.jpg')%>" alt="Photograph of Sasankh Munukutla">
+                            <p class="pb_font-15 mt-3 mb-0">Sasankh Munukutla</p>
+                          <p class="pb_font-15"><a href="mailto:sasankh@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sasankh/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
 						</div>
 					</div>
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">Vice President</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/sasankh.jpg')%>" alt="Photograph of Sasankh Munukutla">
-              <p class="pb_font-15 mt-3 mb-0">Sasankh Munukutla</p>
-              <p class="pb_font-15"><a href="mailto:sasankh@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sasankh/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3">FO,<br/>Discussions</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/stone.jpg')%>" alt="Photograph of Stone Yang">
               <p class="pb_font-15 mt-3 mb-0">Stone Yang</p>
               <p class="pb_font-15"><a href="mailto:yywstone@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/stone-yuwei-yang-70023b173/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Social Chair</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/yujin.jpg')%>" alt="Photograph of Yu Jin Lee">
-							<p class="pb_font-15 mt-3 mb-0">Yu Jin Lee</p>
-							<p class="pb_font-15"><a href="mailto:yujin512@stanford.edu"><i class="fa fa-envelope"></i></a></p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3">Design &amp; Marketing</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/donovan.jpg')%>" alt="Photograph of Donovan Tokuyama">
-              <p class="pb_font-15 mt-3 mb-0">Donovan Tokuyama</p>
-							<p class="pb_font-15"><a href="mailto:donovant@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/donovan-tokuyama/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Discussions</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/briana.jpg')%>" alt="Photograph of Briana Berger">
-              <p class="pb_font-15 mt-3 mb-0">Briana Berger</p>
-              <p class="pb_font-15"><a href="mailto:brianamb@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/brianaberger/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Fellowships</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/priya.jpg')%>" alt="Photograph of Priya Chatwani">
-              <p class="pb_font-15 mt-3 mb-0">Priya Chatwani</p>
-              <p class="pb_font-15"><a href="mailto:priyac5@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/priya-chatwani" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Fellowships</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/julia.jpg')%>" alt="Photograph of Julia Meltzer">
-							<p class="pb_font-15 mt-3 mb-0">Julia Meltzer</p>
-							<p class="pb_font-15"><a href="mailto:jnmeltzer@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/julia-meltzer-45545a173" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-						</div>
-					</div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>CS106S</h4>
+              <h4 class="mb-3">Financial Officer</h4>
               <img class="img-fluid rounded-circle" src="<%=require('./images/andy.jpg')%>" alt="Photograph of Andy Jin">
               <p class="pb_font-15 mt-3 mb-0">Andy Jin</p>
               <p class="pb_font-15"><a href="mailto:andyjin@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/andygjin/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
@@ -353,62 +300,114 @@
           </div>
 					<div class="col-sm-6 col-md-3">
 						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3">Impact<br/>Lab</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/matt.jpg')%>" alt="Photograph of Matthew Sun">
-							<p class="pb_font-15 mt-3 mb-0">Matthew Sun</p>
-							<p class="pb_font-15"><a href="mailto:mattsun@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="http://linkedin.com/in/matthewds" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3">Impact<br/>Lab</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/vikas.jpg')%>" alt="Photograph of Vikas Maturi">
-							<p class="pb_font-15 mt-3 mb-0">Vikas Maturi</p>
-							<p class="pb_font-15"><a href="mailto:vmaturi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/vikas-maturi-16108248/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-						</div>
-					</div>
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3">Education Outreach</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/jiwon.jpg')%>" alt="Photograph of Jiwon Lee">
-							<p class="pb_font-15 mt-3 mb-0">Jiwon Lee</p>
-							<p class="pb_font-15"><a href="mailto:jiwonlee@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jiwonlee99/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-						</div>
+							<h4 class="mb-3"></br>Social Chair</h4>
+							<img class="img-fluid rounded-circle" src="<%=require('./images/penny.jpg')%>" alt="Photograph of Penny Shi">
+							<p class="pb_font-15 mt-3 mb-0">Penny Shi</p>
+                          <p class="pb_font-15"><a href="mailto:pennyshi@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shipenny/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+                        </div>
 					</div>
 				</div>
-				<div class="row">
-          <div class="col-sm-6 col-md-3">
-            <div class="pb_pricing_v1 p-5 border text-center bg-white">
-              <h4 class="mb-3"></br>Studio</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/jose.jpg')%>" alt="Photograph of Jose Giron">
-              <p class="pb_font-15 mt-3 mb-0">Jose Giron</p>
-              <p class="pb_font-15"><a href="mailto:jmgiron@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jose-giron-8a8a1416a/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-            </div>
-          </div>
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3"></br>Studio</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/saj.jpg')%>" alt="Photograph of Sajana Weerawardhena">
-							<p class="pb_font-13 mt-3 mb-0">Sajana Weerawardhena</p>
-							<p class="pb_font-15"><a href="mailto:sajana@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sajana-weerawardhena-621a57127/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-						</div>
-					</div>
+        <div class="row">
           <div class="col-sm-6 col-md-3">
             <div class="pb_pricing_v1 p-5 border text-center bg-white">
               <h4 class="mb-3">AI+Social Good</h4>
-              <img class="img-fluid rounded-circle" src="<%=require('./images/swetha.jpg')%>" alt="Photograph of Swetha Revanur">
-              <p class="pb_font-15 mt-3 mb-0">Swetha Revanur</p>
-              <p class="pb_font-15"><a href="mailto:srevanur@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/swetharevanur/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/shubhang.jpg')%>" alt="Photograph of Shubhang Desai">
+              <p class="pb_font-15 mt-3 mb-0">Shubhang Desai</p>
+              <p class="pb_font-15"><a href="mailto:shubhang@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shubhangd/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
             </div>
           </div>
-					<div class="col-sm-6 col-md-3">
-						<div class="pb_pricing_v1 p-5 border text-center bg-white">
-							<h4 class="mb-3">AI+Social Good</h4>
-							<img class="img-fluid rounded-circle" src="<%=require('./images/shubhang.jpg')%>" alt="Photograph of Shubhang Desai">
-							<p class="pb_font-15 mt-3 mb-0">Shubhang Desai</p>
-							<p class="pb_font-15"><a href="mailto:shubhang@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shubhangd/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
-						</div>
-					</div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Design &amp; Marketing</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/kelsey.png')%>" alt="Photograph of Kelsey Wang">
+              <p class="pb_font-15 mt-3 mb-0">Kelsey Wang</p>
+              <p class="pb_font-15"><a href="mailto:kelseytw@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/kelseytw/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Discussions</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/ananya.jpg')%>" alt="Photograph of Ananya Karthik">
+              <p class="pb_font-15 mt-3 mb-0">Ananya Karthik</p>
+              <p class="pb_font-15"><a href="mailto:ananya23@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/ananya-karthik-668618193" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Discussions</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/poojit.jpg')%>" alt="Photograph of Poojit Hegde">
+              <p class="pb_font-15 mt-3 mb-0">Poojit Hegde</p>
+              <p class="pb_font-15"><a href="mailto:phegde8@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/phalpha/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Fellowships</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/julia.jpg')%>" alt="Photograph of Julia Meltzer">
+              <p class="pb_font-15 mt-3 mb-0">Julia Meltzer</p>
+              <p class="pb_font-15"><a href="mailto:jnmeltzer@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/julia-meltzer-45545a173" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Fellowships</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/jessica.jpg')%>" alt="Photograph of Jessica Yu">
+              <p class="pb_font-15 mt-3 mb-0">Jessica Yu</p>
+              <p class="pb_font-15"><a href="mailto:jmyu@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/jessica-m-yu" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>CS106S</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/matthewe.jpg')%>" alt="Photograph of Matthew Early">
+              <p class="pb_font-15 mt-3 mb-0">Matthew Early</p>
+              <p class="pb_font-15"><a href="mailto:mmearly@stanford.edu"><i class="fa fa-envelope"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>CS106S</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/cooper.jpg')%>" alt="Photograph of Cooper deNicola">
+              <p class="pb_font-15 mt-3 mb-0">Cooper deNicola</p>
+              <p class="pb_font-15"><a href="mailto:cdenicol@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/cooperdenicola/" target="_blank"><i class="fa fa-linkedin"></i></a></p></p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3">Education</br> Outreach</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/shelly.jpg')%>" alt="Photograph of Shelly Goel">
+              <p class="pb_font-15 mt-3 mb-0">Shelly Goel</p>
+              <p class="pb_font-15"><a href="mailto:shelly23@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/shelly-goel-2023/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+              <div class="pb_pricing_v1 p-5 border text-center bg-white">
+                  <h4 class="mb-3">Impact<br/>Lab</h4>
+                  <img class="img-fluid rounded-circle" src="<%=require('./images/raymond.jpg')%>" alt="Photograph of Raymond Yao">
+                  <p class="pb_font-15 mt-3 mb-0">Raymond Yao</p>
+                  <p class="pb_font-15"><a href="mailto:ryao28@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/yaoraymond/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+              <div class="pb_pricing_v1 p-5 border text-center bg-white">
+                  <h4 class="mb-3">Impact<br/>Lab</h4>
+                  <img class="img-fluid rounded-circle" src="<%=require('./images/nicholas.jpg')%>" alt="Photograph of Nicholas Sligh">
+                  <p class="pb_font-15 mt-3 mb-0">Nicholas Sligh</p>
+                  <p class="pb_font-15"><a href="mailto:nick1019@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/nicholas-sligh-650594166/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="pb_pricing_v1 p-5 border text-center bg-white">
+              <h4 class="mb-3"></br>Studio</h4>
+              <img class="img-fluid rounded-circle" src="<%=require('./images/sofia.jpg')%>" alt="Photograph of Sofia Avila">
+              <p class="pb_font-15 mt-3 mb-0">Sofia Avila</p>
+              <p class="pb_font-15"><a href="mailto:sofiaaj@stanford.edu"><i class="fa fa-envelope"></i></a> | <a href="https://www.linkedin.com/in/sofiaavilaj/" target="_blank"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+          </div>
           </div>
         </div>
     </section>
