--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
             <div class="sub-heading">
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
 <!--                            <p> <a href="https://solo.stanford.edu/opportunities/cssocial-good-summer-fellowship-2020" target="_blank" id="apply-link">Apply for a CS+SG fellowship today!</a> </p>-->
-                            <p> <a href="https://stanfordai4good.github.io/" target="_blank" id="apply-link">🆕 AI+Social Good Summer Workshop Series</a> </p>
-							<p class="mb-4"><a href="http://bit.ly/cssg_eoy" target="_blank" id="past-work">Look at Our Past Work</a></p>
+                            <p> <a href="http://bit.ly/cssg2020" target="_blank" id="apply-link"> 🆕 Apply to join the CS+Social Good Team! </a> </p>
+                            <p class="mb-4"><a href="http://bit.ly/cssg_eoy" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://www.facebook.com/cs4good/" target="_blank"><i class="fa fa-facebook"></i></span></a>
@@ -81,6 +81,9 @@
     <section class="pb_section bg-light pb_slant-white pb_pb-250" id="section-story">
       <div class="container">
         <div class="row justify-content-center mb-5">
+          <iframe width="80%" height="500" src="https://www.youtube.com/embed/hGzRE0C0rY4"
+                  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          </iframe>
           <div class="col-md-8 text-center mb-5">
             <h5 class="text-uppercase pb_font-15 mt-5 mb-2 pb_color-dark-opacity-3 pb_letter-spacing-2"><strong>Our Story</strong></h5>
             <h2>Who We Are</h2>
