Removed NTM App Link + Added Fellowship App Linnk

--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
             <h2 class="heading mb-3">Stanford CS+Social Good</h2>
             <div class="sub-heading">
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
-<!--                            <p> <a href="https://solo.stanford.edu/opportunities/cssocial-good-summer-fellowship-2020" target="_blank" id="apply-link">Apply for a CS+SG fellowship today!</a> </p>-->
-                            <p> <a href="http://bit.ly/cssg2020" target="_blank" id="apply-link"> 🆕 Apply to join the CS+Social Good Team! </a> </p>
+                            <p> <a href=https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021 target="_blank" id="apply-link"> 🆕 Apply for a CS+SG fellowship today!</a> </p>
+<!--                            <p> <a href="http://bit.ly/cssg2020" target="_blank" id="apply-link"> 🆕 Apply to join the CS+Social Good Team! </a> </p>-->
                             <p class="mb-4"><a href="http://bit.ly/cssg_eoy" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
                   <a class="btn btn-lg pb_outline-light smoothscroll" href="https://medium.com/@cs4good" target="_blank"><i class="fa fa-medium"></i></span></a>
@@ -144,6 +144,7 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">Studio</h3>
                     <p class="text-sans-serif pb_font-16">Student teams partner with nonprofits and social ventures to build impactful technical projects over 2 quarters.</p>
+                    <p class="text-sans-serif pb_font-16"> <a href="http://web.stanford.edu/class/cs51/" target="_blank"> <u>Class Website</u> </a> </p>
                   </div>
                 </div>
 
@@ -163,6 +164,7 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">AI+Social Good</h3>
                     <p class="text-sans-serif pb_font-16">Students learn about and apply cutting-edge artificial intelligence techniques to real-world social good space.</p>
+                    <p class="text-sans-serif pb_font-16"> <a href="https://stanfordai4good.github.io/" target="_blank"> <u>Summer Workshop</u> </a> </p>
                   </div>
                 </div>
 
@@ -171,6 +173,7 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">CS 106S</h3>
                     <p class="text-sans-serif pb_font-16">A 1-unit lab for the introductory CS sequence that applies concepts learned in class to topics in the tech for good space.</p>
+                    <p class="text-sans-serif pb_font-16"> <a href="http://web.stanford.edu/class/cs106s/" target="_blank"> <u>Class Website</u> </a> </p>
                   </div>
                 </div>
 
@@ -204,6 +207,7 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">Education Outreach</h3>
                     <p class="text-sans-serif pb_font-16">Our team is creating tech for good, post-AP exam project curricula for high school AP CS classes across the country.</p>
+                    <p class="text-sans-serif pb_font-16"> <a href="https://teachcs4good.org/" target="_blank"> <u>Education Material</u> </a> </p>
                   </div>
                 </div>
 
@@ -223,6 +227,7 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">Fellowships</h3>
                     <p class="text-sans-serif pb_font-16">In partnership with the Haas Center, we provide fellows stipends to work on social ventures all across the world.</p>
+                    <p class="text-sans-serif pb_font-16"> <a href="https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021" target="_blank"> <u>🆕 Apply for a CS+SG fellowship!</u> </a> </p>
                   </div>
                 </div>
 
