Removed fellowships + added CS21SI Website link

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             <h2 class="heading mb-3">Stanford CS+Social Good</h2>
             <div class="sub-heading">
               <p class="mb-4">An organization of technologists, designers, and thinkers passionate about maximizing the benefits of technology and mitigating its harms.</p>
-                            <p> <a href=https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021 target="_blank" id="apply-link"> 🆕 Apply for a CS+SG fellowship today!</a> </p>
+<!--                            <p> <a href=https://solo.stanford.edu/opportunities/cssocial-good-spring-and-summer-fellowship-2021 target="_blank" id="apply-link"> 🆕 Apply for a CS+SG fellowship today!</a> </p>-->
 <!--                            <p> <a href="http://bit.ly/cssg2020" target="_blank" id="apply-link"> 🆕 Apply to join the CS+Social Good Team! </a> </p>-->
                             <p class="mb-4"><a href="http://bit.ly/cssg_eoy" target="_blank" id="past-work">Look at Our Past Work</a></p>
 							<p class="mb-5">
@@ -164,7 +164,7 @@
                   <div class="media-body">
                     <h3 class="mt-2 mb-2 heading">AI+Social Good</h3>
                     <p class="text-sans-serif pb_font-16">Students learn about and apply cutting-edge artificial intelligence techniques to real-world social good space.</p>
-                    <p class="text-sans-serif pb_font-16"> <a href="https://stanfordai4good.github.io/" target="_blank"> <u>Summer Workshop</u> </a> </p>
+                    <p class="text-sans-serif pb_font-16"> <a href="https://web.stanford.edu/class/cs21si/" target="_blank"> <u>Class Website</u> </a> <a href="https://stanfordai4good.github.io/" target="_blank"> <u>Summer Workshop</u> </a></p>
                   </div>
                 </div>
 
@@ -543,7 +543,7 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            <p class="pb_font-14">&copy; 2019 CS+Social Good.</p>
+            <p class="pb_font-14">&copy; 2021 CS+Social Good.</p>
           </div>
         </div>
       </div>
